# xfce4-workspace-bar

./: .gitignore  NEWS  README  README.md  THANKS  configure.ac.in
panel-plugin/: Makefile.am  workspacebar-dialogs.c  workspacebar-dialogs.h  workspacebar.c  workspacebar.h
